src/objects/PSA_Rate_Set__c.object
<CustomObject>
    <description>Custom - A PSA Rate Set, composed of multiple separate PSA Rates, determines which bill rates are applied to a project or an opportunity.</description>
    <fields>
        <fullName>PSA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PSA_Bill_Rate_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Is_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this is the global PSA Rate Set</description>
        <label>Is Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA Project</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>PSA_Bill_Rate_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PSA Rate Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Project__c</columns>
        <columns>PSA_Account__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Global_Rate_Sets</fullName>
        <columns>NAME</columns>
        <columns>PSA_Account__c</columns>
        <columns>PSA_Is_Global__c</columns>
        <columns>PSA_Project__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Is_Global__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PSA_Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>PSA_Project__c</field>
            <operation>equals</operation>
        </filters>
        <label>Global Rate Sets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Rate Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSA Rate Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>